--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 
   "builds": [
     {
-      "src": "./server.js",
+      "src": "server.js",
       "use": "@vercel/node",
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/recetas"
     }
   ]
 }
